--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo/Navikko2.svg" />
+    <link rel="apple-touch-icon" href="/logo/NAVIkko Green.png" />
+    <link rel="shortcut icon" href="/logo/Navikko2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Navikko - Restaurant Discovery</title>
   </head>
