--- a/website/index.html
+++ b/website/index.html
@@ -68,9 +68,14 @@
                     <a href="#pricing" class="text-gray-700 hover:text-purple-600">料金</a>
                     <a href="#contact" class="text-gray-700 hover:text-purple-600">お問い合わせ</a>
                 </div>
-                <a href="https://app.navikko.com" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">
-                    今すぐ始める
-                </a>
+                <div class="flex space-x-3">
+                    <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">
+                        ベータ版を試す
+                    </a>
+                    <a href="https://restaurant-app-xi-ashy.vercel.app" class="border border-purple-600 text-purple-600 px-6 py-2 rounded-lg hover:bg-purple-50">
+                        今すぐ始める
+                    </a>
+                </div>
             </div>
         </nav>
 
@@ -82,8 +87,8 @@
                     11言語対応で外国人観光客との円滑なコミュニケーションを実現。
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                    <a href="https://app.navikko.com" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">
-                        無料で始める
+                    <a href="/beta" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">
+                        ベータ版アクセス
                     </a>
                     <a href="#demo" class="border-2 border-white text-white px-8 py-3 rounded-lg font-semibold hover:bg-white hover:text-purple-600">
                         デモを見る
@@ -147,7 +152,7 @@
                             <li>✓ QRコード注文</li>
                             <li>✓ 月間100注文まで</li>
                         </ul>
-                        <a href="https://app.navikko.com" class="block w-full bg-gray-200 text-gray-800 py-3 rounded-lg font-semibold text-center hover:bg-gray-300">無料で始める</a>
+                        <a href="/beta" class="block w-full bg-gray-200 text-gray-800 py-3 rounded-lg font-semibold text-center hover:bg-gray-300">ベータ版を試す</a>
                     </div>
                     <div class="bg-white p-8 rounded-lg shadow-xl border-2 border-purple-500">
                         <h3 class="text-2xl font-bold mb-4 text-center">プロ</h3>
@@ -160,7 +165,7 @@
                             <li>✓ 無制限注文</li>
                             <li>✓ 近接アラート機能</li>
                         </ul>
-                        <a href="https://app.navikko.com" class="block w-full bg-purple-600 text-white py-3 rounded-lg font-semibold text-center hover:bg-purple-700">プロプランを選択</a>
+                        <a href="/beta" class="block w-full bg-purple-600 text-white py-3 rounded-lg font-semibold text-center hover:bg-purple-700">ベータ版でお試し</a>
                     </div>
                     <div class="bg-white p-8 rounded-lg shadow-lg">
                         <h3 class="text-2xl font-bold mb-4 text-center">エンタープライズ</h3>
@@ -226,7 +231,7 @@
                     <a href="#pricing" class="text-gray-700 hover:text-purple-600">Pricing</a>
                     <a href="#contact" class="text-gray-700 hover:text-purple-600">Contact</a>
                 </div>
-                <a href="https://app.navikko.com" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Get Started</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Try Beta</a>
             </div>
         </nav>
 
@@ -238,7 +243,7 @@
                     Seamless communication with international tourists in 11 languages.
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                    <a href="https://app.navikko.com" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">Start Free</a>
+                    <a href="/beta" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">Try Beta</a>
                     <a href="#demo" class="border-2 border-white text-white px-8 py-3 rounded-lg font-semibold hover:bg-white hover:text-purple-600">View Demo</a>
                 </div>
             </div>
