Fix CSS property ordering and separate admin access from public website

--- a/website/index.html
+++ b/website/index.html
@@ -54,9 +54,9 @@
         /* Ensure proper mobile viewport behavior across all browsers */
         @supports not (color: color(display-p3 1 0 0)) {
             body {
-                text-size-adjust: 100%;
                 -webkit-text-size-adjust: 100%; /* Safari fallback */
                 -ms-text-size-adjust: 100%; /* IE/Edge fallback */
+                text-size-adjust: 100%;
             }
         }
     </style>
@@ -239,6 +239,9 @@
                 </div>
                 <p class="text-gray-400 mb-4">外国人観光客との架け橋となる多言語レストランアプリ</p>
                 <p class="text-gray-500">&copy; 2025 Navikko. All rights reserved.</p>
+                <div class="mt-4">
+                    <a href="/website/admin.html" class="text-xs text-gray-600 hover:text-gray-400 opacity-50">Admin</a>
+                </div>
             </div>
         </footer>
     </div>
@@ -305,6 +308,9 @@
                 </div>
                 <p class="text-gray-400 mb-4">Multilingual restaurant app bridging with international tourists</p>
                 <p class="text-gray-500">&copy; 2025 Navikko. All rights reserved.</p>
+                <div class="mt-4">
+                    <a href="/website/admin.html" class="text-xs text-gray-600 hover:text-gray-400 opacity-50">Admin</a>
+                </div>
             </div>
         </footer>
     </div>
