Remove direct link to main app, only keep beta access link in website

--- a/website/index.html
+++ b/website/index.html
@@ -109,14 +109,9 @@
                     <a href="#pricing" class="text-gray-700 hover:text-purple-600">料金</a>
                     <a href="#contact" class="text-gray-700 hover:text-purple-600">お問い合わせ</a>
                 </div>
-                <div class="flex space-x-3">
-                    <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">
-                        ベータ版を試す
-                    </a>
-                    <a href="https://restaurant-app-xi-ashy.vercel.app" class="border border-purple-600 text-purple-600 px-6 py-2 rounded-lg hover:bg-purple-50">
-                        今すぐ始める
-                    </a>
-                </div>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">
+                    ベータ版を試す
+                </a>
             </div>
         </nav>
 
@@ -339,14 +334,14 @@
                     <img src="/logo/Navikko2.svg" alt="Navikko" class="h-8 w-8">
                     <span class="text-xl font-bold text-purple-600">Navikko</span>
                 </div>
-                <a href="https://app.navikko.com" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">立即开始</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">立即开始</a>
             </div>
         </nav>
         <section class="gradient-bg text-white py-20">
             <div class="container mx-auto px-6 text-center">
                 <h1 class="text-5xl font-bold mb-6">与国际游客的桥梁</h1>
                 <p class="text-xl mb-8">面向日本餐厅的多语言应用，支持11种语言</p>
-                <a href="https://app.navikko.com" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">免费开始</a>
+                <a href="/beta" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">免费开始</a>
             </div>
         </section>
         <footer class="bg-gray-800 text-white py-12">
@@ -363,14 +358,14 @@
                     <img src="/logo/Navikko2.svg" alt="Navikko" class="h-8 w-8">
                     <span class="text-xl font-bold text-purple-600">Navikko</span>
                 </div>
-                <a href="https://app.navikko.com" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">시작하기</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">시작하기</a>
             </div>
         </nav>
         <section class="gradient-bg text-white py-20">
             <div class="container mx-auto px-6 text-center">
                 <h1 class="text-5xl font-bold mb-6">국제 관광객과의 가교</h1>
                 <p class="text-xl mb-8">일본 레스토랑을 위한 다국어 앱, 11개 언어 지원</p>
-                <a href="https://app.navikko.com" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">무료 시작</a>
+                <a href="/beta" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">무료 시작</a>
             </div>
         </section>
         <footer class="bg-gray-800 text-white py-12">
@@ -387,14 +382,14 @@
                     <img src="/logo/Navikko2.svg" alt="Navikko" class="h-8 w-8">
                     <span class="text-xl font-bold text-purple-600">Navikko</span>
                 </div>
-                <a href="https://app.navikko.com" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">เริ่มต้นใช้งาน</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">เริ่มต้นใช้งาน</a>
             </div>
         </nav>
         <section class="gradient-bg text-white py-20">
             <div class="container mx-auto px-6 text-center">
                 <h1 class="text-5xl font-bold mb-6">สะพานเชื่อมกับนักท่องเที่ยวต่างชาติ</h1>
                 <p class="text-xl mb-8">แอปร้านอาหารหลายภาษาสำหรับร้านอาหารญี่ปุ่น รองรับ 11 ภาษา</p>
-                <a href="https://app.navikko.com" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">เริ่มฟรี</a>
+                <a href="/beta" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">เริ่มฟรี</a>
             </div>
         </section>
         <footer class="bg-gray-800 text-white py-12">
@@ -411,14 +406,14 @@
                     <img src="/logo/Navikko2.svg" alt="Navikko" class="h-8 w-8">
                     <span class="text-xl font-bold text-purple-600">Navikko</span>
                 </div>
-                <a href="https://app.navikko.com" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Bắt đầu</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Bắt đầu</a>
             </div>
         </nav>
         <section class="gradient-bg text-white py-20">
             <div class="container mx-auto px-6 text-center">
                 <h1 class="text-5xl font-bold mb-6">Cầu nối với du khách quốc tế</h1>
                 <p class="text-xl mb-8">Ứng dụng nhà hàng đa ngôn ngữ cho các nhà hàng Nhật Bản, hỗ trợ 11 ngôn ngữ</p>
-                <a href="https://app.navikko.com" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">Bắt đầu miễn phí</a>
+                <a href="/beta" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">Bắt đầu miễn phí</a>
             </div>
         </section>
         <footer class="bg-gray-800 text-white py-12">
@@ -435,14 +430,14 @@
                     <img src="/logo/Navikko2.svg" alt="Navikko" class="h-8 w-8">
                     <span class="text-xl font-bold text-purple-600">Navikko</span>
                 </div>
-                <a href="https://app.navikko.com" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Mulakan</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Mulakan</a>
             </div>
         </nav>
         <section class="gradient-bg text-white py-20">
             <div class="container mx-auto px-6 text-center">
                 <h1 class="text-5xl font-bold mb-6">Jambatan dengan pelancong antarabangsa</h1>
                 <p class="text-xl mb-8">Aplikasi restoran pelbagai bahasa untuk restoran Jepun, sokongan 11 bahasa</p>
-                <a href="https://app.navikko.com" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">Mula percuma</a>
+                <a href="/beta" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">Mula percuma</a>
             </div>
         </section>
         <footer class="bg-gray-800 text-white py-12">
@@ -459,14 +454,14 @@
                     <img src="/logo/Navikko2.svg" alt="Navikko" class="h-8 w-8">
                     <span class="text-xl font-bold text-purple-600">Navikko</span>
                 </div>
-                <a href="https://app.navikko.com" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Mulai</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Mulai</a>
             </div>
         </nav>
         <section class="gradient-bg text-white py-20">
             <div class="container mx-auto px-6 text-center">
                 <h1 class="text-5xl font-bold mb-6">Jembatan dengan wisatawan internasional</h1>
                 <p class="text-xl mb-8">Aplikasi restoran multibahasa untuk restoran Jepang, dukungan 11 bahasa</p>
-                <a href="https://app.navikko.com" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">Mulai gratis</a>
+                <a href="/beta" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">Mulai gratis</a>
             </div>
         </section>
         <footer class="bg-gray-800 text-white py-12">
@@ -483,14 +478,14 @@
                     <img src="/logo/Navikko2.svg" alt="Navikko" class="h-8 w-8">
                     <span class="text-xl font-bold text-purple-600">Navikko</span>
                 </div>
-                <a href="https://app.navikko.com" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Rozpocznij</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Rozpocznij</a>
             </div>
         </nav>
         <section class="gradient-bg text-white py-20">
             <div class="container mx-auto px-6 text-center">
                 <h1 class="text-5xl font-bold mb-6">Most z międzynarodowymi turystami</h1>
                 <p class="text-xl mb-8">Wielojęzyczna aplikacja restauracyjna dla japońskich restauracji, obsługa 11 języków</p>
-                <a href="https://app.navikko.com" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">Rozpocznij za darmo</a>
+                <a href="/beta" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">Rozpocznij za darmo</a>
             </div>
         </section>
         <footer class="bg-gray-800 text-white py-12">
@@ -507,14 +502,14 @@
                     <img src="/logo/Navikko2.svg" alt="Navikko" class="h-8 w-8">
                     <span class="text-xl font-bold text-purple-600">Navikko</span>
                 </div>
-                <a href="https://app.navikko.com" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Comenzar</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Comenzar</a>
             </div>
         </nav>
         <section class="gradient-bg text-white py-20">
             <div class="container mx-auto px-6 text-center">
                 <h1 class="text-5xl font-bold mb-6">Puente con turistas internacionales</h1>
                 <p class="text-xl mb-8">Aplicación de restaurante multiidioma para restaurantes japoneses, soporte para 11 idiomas</p>
-                <a href="https://app.navikko.com" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">Comenzar gratis</a>
+                <a href="/beta" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">Comenzar gratis</a>
             </div>
         </section>
         <footer class="bg-gray-800 text-white py-12">
@@ -531,14 +526,14 @@
                     <img src="/logo/Navikko2.svg" alt="Navikko" class="h-8 w-8">
                     <span class="text-xl font-bold text-purple-600">Navikko</span>
                 </div>
-                <a href="https://app.navikko.com" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Începe</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Începe</a>
             </div>
         </nav>
         <section class="gradient-bg text-white py-20">
             <div class="container mx-auto px-6 text-center">
                 <h1 class="text-5xl font-bold mb-6">Pod cu turiștii internaționali</h1>
                 <p class="text-xl mb-8">Aplicație de restaurant multilingvă pentru restaurantele japoneze, suport pentru 11 limbi</p>
-                <a href="https://app.navikko.com" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">Începe gratuit</a>
+                <a href="/beta" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">Începe gratuit</a>
             </div>
         </section>
         <footer class="bg-gray-800 text-white py-12">
