--- a/website/index.html
+++ b/website/index.html
@@ -110,7 +110,7 @@
                     <a href="#contact" class="text-gray-700 hover:text-purple-600">お問い合わせ</a>
                 </div>
                 <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">
-                    ベータ版を試す
+                    レストランオーナー登録
                 </a>
             </div>
         </nav>
@@ -124,7 +124,7 @@
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center">
                     <a href="/beta" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">
-                        ベータ版アクセス
+                        レストランオーナーテストアクセス
                     </a>
                     <a href="#demo" class="border-2 border-white text-white px-8 py-3 rounded-lg font-semibold hover:bg-white hover:text-purple-600">
                         デモを見る
@@ -187,8 +187,9 @@
                             <li>✓ 基本的な多言語対応</li>
                             <li>✓ QRコード注文</li>
                             <li>✓ 月間100注文まで</li>
+                            <li>✓ 基本的な分析レポート</li>
                         </ul>
-                        <a href="/beta" class="block w-full bg-gray-200 text-gray-800 py-3 rounded-lg font-semibold text-center hover:bg-gray-300">ベータ版を試す</a>
+                        <a href="/beta" class="block w-full bg-gray-200 text-gray-800 py-3 rounded-lg font-semibold text-center hover:bg-gray-300">レストランオーナーテスト</a>
                     </div>
                     <div class="bg-white p-8 rounded-lg shadow-xl border-2 border-purple-500">
                         <h3 class="text-2xl font-bold mb-4 text-center">プロ</h3>
@@ -200,8 +201,11 @@
                             <li>✓ 全機能利用可能</li>
                             <li>✓ 無制限注文</li>
                             <li>✓ 近接アラート機能</li>
+                            <li>✓ 高度な分析レポート</li>
+                            <li>✓ 予約管理システム</li>
+                            <li>✓ 月間500注文まで</li>
                         </ul>
-                        <a href="/beta" class="block w-full bg-purple-600 text-white py-3 rounded-lg font-semibold text-center hover:bg-purple-700">ベータ版でお試し</a>
+                        <a href="/beta" class="block w-full bg-purple-600 text-white py-3 rounded-lg font-semibold text-center hover:bg-purple-700">レストランオーナーテスト</a>
                     </div>
                     <div class="bg-white p-8 rounded-lg shadow-lg">
                         <h3 class="text-2xl font-bold mb-4 text-center">エンタープライズ</h3>
@@ -213,9 +217,17 @@
                             <li>✓ 複数店舗対応</li>
                             <li>✓ カスタム機能開発</li>
                             <li>✓ 専用サポート</li>
+                            <li>✓ 無制限注文</li>
+                            <li>✓ APIアクセス</li>
+                            <li>✓ ホワイトラベルソリューション</li>
                         </ul>
                         <a href="#contact" class="block w-full bg-gray-800 text-white py-3 rounded-lg font-semibold text-center hover:bg-gray-700">お問い合わせ</a>
                     </div>
+                </div>
+                
+                <div class="mt-12 text-center">
+                    <p class="text-gray-600 mb-4">すべてのプランには14日間の無料トライアルが含まれます</p>
+                    <p class="text-sm text-gray-500">テスト期間中はプロモーションコードを使用してアクセスしてください</p>
                 </div>
             </div>
         </section>
@@ -270,7 +282,7 @@
                     <a href="#pricing" class="text-gray-700 hover:text-purple-600">Pricing</a>
                     <a href="#contact" class="text-gray-700 hover:text-purple-600">Contact</a>
                 </div>
-                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Try Beta</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Restaurant Owner Access</a>
             </div>
         </nav>
 
@@ -282,7 +294,7 @@
                     Seamless communication with international tourists in 11 languages.
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                    <a href="/beta" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">Try Beta</a>
+                    <a href="/beta" class="bg-white text-purple-600 px-8 py-3 rounded-lg font-semibold hover:bg-gray-100">Restaurant Owner Test Access</a>
                     <a href="#demo" class="border-2 border-white text-white px-8 py-3 rounded-lg font-semibold hover:bg-white hover:text-purple-600">View Demo</a>
                 </div>
             </div>
@@ -311,6 +323,87 @@
             </div>
         </section>
 
+        <section id="pricing" class="py-20 bg-gray-50">
+            <div class="container mx-auto px-6">
+                <h2 class="text-4xl font-bold text-center mb-12">Pricing Plans</h2>
+                <div class="grid md:grid-cols-3 gap-8 max-w-4xl mx-auto">
+                    <div class="bg-white p-8 rounded-lg shadow-lg">
+                        <h3 class="text-2xl font-bold mb-4 text-center">Basic</h3>
+                        <div class="text-center mb-6">
+                            <span class="text-4xl font-bold">$0</span>
+                            <span class="text-gray-600">/month</span>
+                        </div>
+                        <ul class="space-y-3 mb-8">
+                            <li>✓ Basic multilingual support</li>
+                            <li>✓ QR code ordering</li>
+                            <li>✓ Up to 100 orders/month</li>
+                            <li>✓ Basic analytics report</li>
+                        </ul>
+                        <a href="/beta" class="block w-full bg-gray-200 text-gray-800 py-3 rounded-lg font-semibold text-center hover:bg-gray-300">Restaurant Owner Test</a>
+                    </div>
+                    <div class="bg-white p-8 rounded-lg shadow-xl border-2 border-purple-500">
+                        <h3 class="text-2xl font-bold mb-4 text-center">Pro</h3>
+                        <div class="text-center mb-6">
+                            <span class="text-4xl font-bold">$75</span>
+                            <span class="text-gray-600">/month</span>
+                        </div>
+                        <ul class="space-y-3 mb-8">
+                            <li>✓ All features available</li>
+                            <li>✓ Unlimited orders</li>
+                            <li>✓ Proximity alert feature</li>
+                            <li>✓ Advanced analytics report</li>
+                            <li>✓ Reservation management system</li>
+                            <li>✓ Up to 500 orders/month</li>
+                        </ul>
+                        <a href="/beta" class="block w-full bg-purple-600 text-white py-3 rounded-lg font-semibold text-center hover:bg-purple-700">Restaurant Owner Test</a>
+                    </div>
+                    <div class="bg-white p-8 rounded-lg shadow-lg">
+                        <h3 class="text-2xl font-bold mb-4 text-center">Enterprise</h3>
+                        <div class="text-center mb-6">
+                            <span class="text-4xl font-bold">$225</span>
+                            <span class="text-gray-600">/month</span>
+                        </div>
+                        <ul class="space-y-3 mb-8">
+                            <li>✓ Multi-location support</li>
+                            <li>✓ Custom feature development</li>
+                            <li>✓ Dedicated support</li>
+                            <li>✓ Unlimited orders</li>
+                            <li>✓ API access</li>
+                            <li>✓ White-label solution</li>
+                        </ul>
+                        <a href="#contact" class="block w-full bg-gray-800 text-white py-3 rounded-lg font-semibold text-center hover:bg-gray-700">Contact Us</a>
+                    </div>
+                </div>
+                
+                <div class="mt-12 text-center">
+                    <p class="text-gray-600 mb-4">All plans include a 14-day free trial</p>
+                    <p class="text-sm text-gray-500">Use promotional codes for test access during trial period</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="py-20">
+            <div class="container mx-auto px-6">
+                <h2 class="text-4xl font-bold text-center mb-12">Contact Us</h2>
+                <div class="max-w-2xl mx-auto">
+                    <form class="space-y-6" action="mailto:contact@navikko.com" method="post" enctype="text/plain">
+                        <div class="grid md:grid-cols-2 gap-4">
+                            <input type="text" name="restaurant" placeholder="Restaurant Name" class="w-full p-3 border border-gray-300 rounded-lg" required>
+                            <input type="text" name="name" placeholder="Your Name" class="w-full p-3 border border-gray-300 rounded-lg" required>
+                        </div>
+                        <div class="grid md:grid-cols-2 gap-4">
+                            <input type="email" name="email" placeholder="Email Address" class="w-full p-3 border border-gray-300 rounded-lg" required>
+                            <input type="tel" name="phone" placeholder="Phone Number" class="w-full p-3 border border-gray-300 rounded-lg">
+                        </div>
+                        <textarea rows="4" name="message" placeholder="Your Message" class="w-full p-3 border border-gray-300 rounded-lg"></textarea>
+                        <button type="submit" class="w-full bg-purple-600 text-white py-3 rounded-lg font-semibold hover:bg-purple-700">
+                            Send Message
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </section>
+
         <footer class="bg-gray-800 text-white py-12">
             <div class="container mx-auto px-6 text-center">
                 <div class="flex items-center justify-center space-x-3 mb-4">
@@ -334,7 +427,7 @@
                     <img src="/logo/Navikko2.svg" alt="Navikko" class="h-8 w-8">
                     <span class="text-xl font-bold text-purple-600">Navikko</span>
                 </div>
-                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">立即开始</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">餐厅老板注册</a>
             </div>
         </nav>
         <section class="gradient-bg text-white py-20">
@@ -358,7 +451,7 @@
                     <img src="/logo/Navikko2.svg" alt="Navikko" class="h-8 w-8">
                     <span class="text-xl font-bold text-purple-600">Navikko</span>
                 </div>
-                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">시작하기</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">레스토랑 오너 등록</a>
             </div>
         </nav>
         <section class="gradient-bg text-white py-20">
@@ -382,7 +475,7 @@
                     <img src="/logo/Navikko2.svg" alt="Navikko" class="h-8 w-8">
                     <span class="text-xl font-bold text-purple-600">Navikko</span>
                 </div>
-                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">เริ่มต้นใช้งาน</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">ลงทะเบียนเจ้าของร้านอาหาร</a>
             </div>
         </nav>
         <section class="gradient-bg text-white py-20">
@@ -406,7 +499,7 @@
                     <img src="/logo/Navikko2.svg" alt="Navikko" class="h-8 w-8">
                     <span class="text-xl font-bold text-purple-600">Navikko</span>
                 </div>
-                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Bắt đầu</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Đăng ký chủ nhà hàng</a>
             </div>
         </nav>
         <section class="gradient-bg text-white py-20">
@@ -430,7 +523,7 @@
                     <img src="/logo/Navikko2.svg" alt="Navikko" class="h-8 w-8">
                     <span class="text-xl font-bold text-purple-600">Navikko</span>
                 </div>
-                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Mulakan</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Daftar pemilik restoran</a>
             </div>
         </nav>
         <section class="gradient-bg text-white py-20">
@@ -454,7 +547,7 @@
                     <img src="/logo/Navikko2.svg" alt="Navikko" class="h-8 w-8">
                     <span class="text-xl font-bold text-purple-600">Navikko</span>
                 </div>
-                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Mulai</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Daftar pemilik restoran</a>
             </div>
         </nav>
         <section class="gradient-bg text-white py-20">
@@ -478,7 +571,7 @@
                     <img src="/logo/Navikko2.svg" alt="Navikko" class="h-8 w-8">
                     <span class="text-xl font-bold text-purple-600">Navikko</span>
                 </div>
-                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Rozpocznij</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Zarejestruj się jako właściciel restauracji</a>
             </div>
         </nav>
         <section class="gradient-bg text-white py-20">
@@ -502,7 +595,7 @@
                     <img src="/logo/Navikko2.svg" alt="Navikko" class="h-8 w-8">
                     <span class="text-xl font-bold text-purple-600">Navikko</span>
                 </div>
-                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Comenzar</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Registro de propietario de restaurante</a>
             </div>
         </nav>
         <section class="gradient-bg text-white py-20">
@@ -526,7 +619,7 @@
                     <img src="/logo/Navikko2.svg" alt="Navikko" class="h-8 w-8">
                     <span class="text-xl font-bold text-purple-600">Navikko</span>
                 </div>
-                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Începe</a>
+                <a href="/beta" class="bg-purple-600 text-white px-6 py-2 rounded-lg hover:bg-purple-700">Înregistrare proprietar restaurant</a>
             </div>
         </nav>
         <section class="gradient-bg text-white py-20">
